--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Document</title>
 </head>
 
@@ -76,7 +76,7 @@
   <button class="whiteWine">White wine</button>
   <button class="roseWine">Rose wine</button>
 
-  <script src="js/script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
